# ai-digest

./: README.md  pyproject.toml
src/ai_digest/: __init__.py  cli.py  config.py  curator.py  dedup.py  models.py  renderer.py  state.py
src/ai_digest/collectors/: __init__.py  arxiv.py  base.py  github.py  hackernews.py  reddit.py  rss.py  youtube.py
templates/: digest.html.j2  index.html.j2
tests/: test_cli.py  test_config.py  test_curator.py  test_dedup.py  test_integration.py  test_models.py  test_renderer.py  test_state.py
tests/test_collectors/: test_arxiv.py  test_github.py  test_hackernews.py  test_reddit.py  test_rss.py  test_youtube.py
